--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web",
-		"test": "jest --watchAll"
+		"test:lint": "eslint . --ext .ts,.tsx"
 	},
 	"jest": {
 		"preset": "jest-expo"
@@ -28,15 +28,20 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-native": "~0.72.1",
-		"react-native-safe-area-context": "4.6.3",
+		"react-native-safe-area-context": "4.5.0",
 		"react-native-screens": "~3.22.0",
 		"react-native-web": "~0.19.6"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
 		"@types/react": "~18.0.14",
+		"eslint": "^8.44.0",
+		"eslint-config-universe": "^11.3.0",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-native-a11y": "^3.3.0",
 		"jest": "^29.2.1",
 		"jest-expo": "~49.0.0",
+		"prettier": "^3.0.0",
 		"react-test-renderer": "18.2.0",
 		"typescript": "^5.1.3"
 	},
